--- a/att.html
+++ b/att.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>AT&T — Andrew Thompson</title>
+	<title>AT&T &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -26,12 +26,15 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
+
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -107,44 +110,44 @@
 
 			<div class="gap"></div>
 
-			<img class="large_image" src="img/att/1.jpg">
+			<img class="large_image" src="img/bg.png" data-src="img/att/1.jpg">
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/att/2.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/att/2.png">
 			<div class="medium_image_caption"><h3>Consumer Experience</h3>
 				<p>As part of a brief intended to get AT&T Small Business Services press,
 					my partner and I created various comps. Here's a few.</p>
 			</div>
 			<div class="gap" style="height: 1vh;"></div>
-			<img class="phone_image" src="img/att/4.png">
-			<img class="next_to_phone_image" src="img/att/3.png">
+			<img class="phone_image" src="img/bg.png" data-src="img/att/4.png">
+			<img class="next_to_phone_image" src="img/bg.png" data-src="img/att/3.png">
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/att/5.png">
-			<img class="small_image_right" src="img/att/6.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/att/5.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/att/6.png">
 			<div class="small_image_caption"><h3>Believe Magazine Spots</h3>
 				<p>Full page magazine compositions were created for AT&T's ad builder,
 				utilizing imagery from recently-produced video spots. I assisted in creating
 				these four and helped transition twenty more into a production-ready format.</p>
 			</div>
 			<div class="gap" style="height: 1vh;"></div>
-			<img class="small_image_left" src="img/att/7.png">
-			<img class="small_image_right" src="img/att/8.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/att/7.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/att/8.png">
 
 			<div class="gap"></div>
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Anshumani Khanna</b> — ACD (Copy)</p>
-				<p><b>Jess Andrews</b> — ACD (Art)</p>
-				<p><b>Natalie Taylor</b> — Project Manager</p>
-				<p><b>Peter Sholley</b> — Project Manager</p>
-				<p><b>Oyinda Oluwa</b> — Copywriter</p>
-				<p><b>Ryan Harper</b> — Copywriter</p>
-				<p><b>Lindsay Saiia</b> — Copywriting Intern</p>
-				<p><b>Myself</b> — Art Direction Intern</p>
+				<p><b>Anshumani Khanna</b> &amp; ACD (Copy)</p>
+				<p><b>Jess Andrews</b> &amp; ACD (Art)</p>
+				<p><b>Natalie Taylor</b> &amp; Project Manager</p>
+				<p><b>Peter Sholley</b> &amp; Project Manager</p>
+				<p><b>Oyinda Oluwa</b> &amp; Copywriter</p>
+				<p><b>Ryan Harper</b> &amp; Copywriter</p>
+				<p><b>Lindsay Saiia</b> &amp; Copywriting Intern</p>
+				<p><b>Myself</b> &amp; Art Direction Intern</p>
 			</div>
 
 		</div>
