--- a/dunkin.html
+++ b/dunkin.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>Dunkin' — Andrew Thompson</title>
+	<title>Dunkin' &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -26,12 +26,14 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -104,13 +106,13 @@
 
 			<div class="gap"></div>
 
-			<img class="large_image" src="img/dunkin/1.png">
+			<img class="large_image" src="img/bg.png" data-src="img/dunkin/1.png">
 
 			<div class="gap"></div>
 			<div class="dunkin_phone_container">
-				<img class="dunkin_1" src="img/dunkin/3.gif">
-				<img class="dunkin_2" src="img/dunkin/4.png">
-				<img class="dunkin_3" src="img/dunkin/5.gif">
+				<img class="dunkin_1" src="img/bg.png" data-src="img/dunkin/3.gif">
+				<img class="dunkin_2" src="img/bg.png" data-src="img/dunkin/4.png">
+				<img class="dunkin_3" src="img/bg.png" data-src="img/dunkin/5.gif">
 			</div>
 			<!-- <img class="next_to_phone_image" src="img/just/9.png"> -->
 			<div class="medium_image_caption"><h3>Mobile</h3>
@@ -147,11 +149,11 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p">
-				<p><b>Sandi Spino</b> — Copywriting</p>
-				<p><b>Sabrina Ghantous</b> — Art Direction</p>
-				<p><b>Dasha Iarotskaia</b> — Art Direction</p>
-				<p><b>Emily Babcock</b> — Production</p>
-				<p><b>Myself</b> — Art Direction</p>
+				<p><b>Sandi Spino</b> &amp; Copywriting</p>
+				<p><b>Sabrina Ghantous</b> &amp; Art Direction</p>
+				<p><b>Dasha Iarotskaia</b> &amp; Art Direction</p>
+				<p><b>Emily Babcock</b> &amp; Production</p>
+				<p><b>Myself</b> &amp; Art Direction</p>
 			</div>
 
 			<div class="gap"></div>
