--- a/inkedin.html
+++ b/inkedin.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>InkedIn — Andrew Thompson</title>
+	<title>InkedIn &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -23,12 +23,14 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -105,8 +107,8 @@
 			<!-- <div class="gap"></div> -->
 
 			<div class="inkedin_phone_container">
-				<img class="inkedin_1" src="img/inkedin/1.png">
-				<img class="inkedin_2" src="img/inkedin/2.png">
+				<img class="inkedin_1" src="img/bg.png" data-src="img/inkedin/1.png">
+				<img class="inkedin_2" src="img/bg.png" data-src="img/inkedin/2.png">
 			</div>
 			<div class="medium_image_caption" style="margin-top: 7%;"><h3>Social Ads</h3>
 				<p>On Instagram and LinkedIn, ads targeted towards people who follow
@@ -116,8 +118,8 @@
 			<!-- <div class="gap"></div> -->
 
 			<div class="inkedin_phone_container">
-				<img class="inkedin_1" src="img/inkedin/3.png">
-				<img class="inkedin_2" src="img/inkedin/4.png">
+				<img class="inkedin_1" src="img/bg.png" data-src="img/inkedin/3.png">
+				<img class="inkedin_2" src="img/bg.png" data-src="img/inkedin/4.png">
 			</div>
 			<div class="medium_image_caption" style="margin-top: 7%;"><h3>Microsite</h3>
 				<p>With both information on local advertising jobs and a LinkedIn credential
@@ -128,8 +130,8 @@
 			<!-- <div class="gap"></div> -->
 
 			<div class="inkedin_phone_container">
-				<img class="inkedin_1" src="img/inkedin/5.png">
-				<img class="inkedin_2" src="img/inkedin/6.png">
+				<img class="inkedin_1" src="img/bg.png" data-src="img/inkedin/5.png">
+				<img class="inkedin_2" src="img/bg.png" data-src="img/inkedin/6.png">
 			</div>
 			<div class="medium_image_caption" style="margin-top: 7%;"><h3>LinkedIn Credential</h3>
 				<p>LinkedIn profiles are boring. We're giving tattooed professionals a place
@@ -139,7 +141,7 @@
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/inkedin/7.jpg">
+			<img class="medium_image" src="img/bg.png" data-src="img/inkedin/7.jpg">
 			<div class="medium_image_caption"><h3>Trade Shows</h3>
 				<p>By popping up at tattoo conventions, we'll increase awareness of jobs
 				at local advertising agencies. This booth specifically is intended for
@@ -148,8 +150,8 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p">
-				<p><b>Lindsay Saiia</b> — Copywriting</p>
-				<p><b>Myself</b> — Art Direction</p>
+				<p><b>Lindsay Saiia</b> &amp; Copywriting</p>
+				<p><b>Myself</b> &amp; Art Direction</p>
 			</div>
 
 			<div class="gap"></div>
