--- a/just.html
+++ b/just.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>JUST Water — Andrew Thompson</title>
+	<title>JUST Water &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -23,12 +23,14 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -102,11 +104,11 @@
 
 			<div class="gap"></div>
 
-			<img class="large_image" src="img/just/6.jpg">
+			<img class="large_image" src="img/bg.png" data-src="img/just/6.jpg">
 
 			<div class="gap"></div>
 
-			<img class="phone_image" src="img/just/7.png">
+			<img class="phone_image" src="img/bg.png" data-src="img/just/7.png">
 			<!-- <img class="next_to_phone_image" src="img/just/9.png"> -->
 			<div class="medium_image_caption"><h3>Music Activation</h3>
 				<p>Jaden Smith will release an unfinished track about Glens Falls,
@@ -115,7 +117,7 @@
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/just/8.jpg">
+			<img class="medium_image" src="img/bg.png" data-src="img/just/8.jpg">
 			<div class="medium_image_caption"><h3>Live Performance</h3>
 				<p>With electric bus service between SoHo and Glens Falls, JUST will
 				transport a select number of fans to see Jaden preform the song for the
@@ -124,17 +126,17 @@
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/just/1.png">
-			<img class="small_image_right" src="img/just/2.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/just/1.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/just/2.png">
 			<div class="medium_image_caption"><h3>Banners</h3>
 				<p>Display ads raise awareness about the brand</p>
 			</div>
-			<img class="small_image_left" src="img/just/3.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/just/3.png">
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/just/4.png">
-			<img class="small_image_right" src="img/just/5.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/just/4.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/just/5.png">
 			<div class="medium_image_caption"><h3>Social Posts</h3>
 				<p>Infographic social posts tie back to the brand's roots as a B Corp
 				and hammer in their sustainability-focused mission.</p>
@@ -144,9 +146,9 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p">
-				<p><b>Lindsay Saiia</b> — Copywriting</p>
-				<p><b>Sarah DeFlaminio</b> — Strategy</p>
-				<p><b>Myself</b> — Art Direction</p>
+				<p><b>Lindsay Saiia</b> &amp; Copywriting</p>
+				<p><b>Sarah DeFlaminio</b> &amp; Strategy</p>
+				<p><b>Myself</b> &amp; Art Direction</p>
 			</div>
 
 			<div class="gap"></div>
