--- a/pangea.html
+++ b/pangea.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>Pangea.app — Andrew Thompson</title>
+	<title>Pangea.app &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -26,12 +26,14 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -108,7 +110,7 @@
 
 			<div class="gap"></div>
 
-			<img class="large_image" src="img/pangea/2.png">
+			<img class="large_image" src="img/bg.png" data-src="img/pangea/2.png">
 
 			<div class="info_header"><h2>UI/UX</h2></div>
 			<div class="info_p"><p>I designed (and redesigned and redesigned) the mobile
@@ -118,7 +120,7 @@
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/pangea/1.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/pangea/1.png">
 			<div class="medium_image_caption"><h3>Website</h3>
 				<p>Using Webflow, I designed and created the company's website, which was
 				later implemented into the web app via react native.</p>
@@ -126,8 +128,8 @@
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/pangea/3.jpg">
-			<img class="small_image_right" src="img/pangea/5.jpg">
+			<img class="small_image_left" src="img/bg.png" data-src="img/pangea/3.jpg">
+			<img class="small_image_right" src="img/bg.png" data-src="img/pangea/5.jpg">
 			<div class="small_image_caption"><h3>Print Collateral</h3>
 				<p>I created a poster for startup showcases along with handouts to emphasize
 				the app's ability to search students by their hard and soft skills.</p>
@@ -135,26 +137,26 @@
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/pangea/6.png">
-			<img class="small_image_right" src="img/pangea/7.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/pangea/6.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/pangea/7.png">
 			<div class="small_image_caption"><h3>LinkedIn Ads</h3>
 				<p>As the primary designer and marketing strategist, I concepted, ran, and
 					evaluated ad sets. This set was targeted at small business owners on LinkedIn
 					looking to outsource tasks to freelancers.</p>
 			</div>
 			<!-- <div class="gap" style="height: 1vh;"></div> -->
-			<img class="small_image_left" src="img/pangea/8.png">
-			<img class="small_image_right" src="img/pangea/9.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/pangea/8.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/pangea/9.png">
 
 			<div class="gap"></div>
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Adam Alpert</b> — CEO</p>
-				<p><b>John Tambunting</b> — CTO</p>
-				<p><b>Kristen Mashikian</b> — Engineering (Former)</p>
-				<p><b>Scott Bagley</b> — Marketing Analytics (Former)</p>
-				<p><b>Myself</b> — Head of Design</p>
+				<p><b>Adam Alpert</b> &amp; CEO</p>
+				<p><b>John Tambunting</b> &amp; CTO</p>
+				<p><b>Kristen Mashikian</b> &amp; Engineering (Former)</p>
+				<p><b>Scott Bagley</b> &amp; Marketing Analytics (Former)</p>
+				<p><b>Myself</b> &amp; Head of Design</p>
 			</div>
 
 		</div>
