--- a/unicef.html
+++ b/unicef.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>UNICEF — Andrew Thompson</title>
+	<title>UNICEF &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -26,12 +26,14 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -108,8 +110,8 @@
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/unicef/1.png">
-			<img class="small_image_right" src="img/unicef/2.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/unicef/1.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/unicef/2.png">
 			<div class="small_image_caption"><h3>Concept 1</h3>
 				<p>While showing how the band's companion app sees the world, we asked parents
 					some big "what if"s about their childrens' impact on the world.</p>
@@ -117,8 +119,8 @@
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/unicef/3.png">
-			<img class="small_image_right" src="img/unicef/4.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/unicef/3.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/unicef/4.png">
 			<div class="medium_image_caption"><h3>Concept 2</h3>
 				<p>Most parents tell their kids they can do whatever they put their mind to.
 				We helped them broaden those horizons by telling them what they can do today
@@ -127,24 +129,24 @@
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/unicef/5.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/unicef/5.png">
 			<div class="medium_image_caption"><h3>OOH</h3>
 				<p>Transit and sidewalk ads speak to working parents, reminding them of
 				the impact their loved ones back at home could have on the globe.</p>
 			</div>
 			<div class="gap" style="height: 1vh;"></div>
-			<img class="medium_image" src="img/unicef/6.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/unicef/6.png">
 
 
 			<div class="gap"></div>
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Lindsay Saiia</b> — Copywriting</p>
-				<p><b>Erin Weiland</b> — Strategy</p>
-				<p><b>Taylor Haughton</b> — Strategy</p>
-				<p><b>Manal Jakhar</b> — Design</p>
-				<p><b>Myself</b> — Art Direction</p>
+				<p><b>Lindsay Saiia</b> &amp; Copywriting</p>
+				<p><b>Erin Weiland</b> &amp; Strategy</p>
+				<p><b>Taylor Haughton</b> &amp; Strategy</p>
+				<p><b>Manal Jakhar</b> &amp; Design</p>
+				<p><b>Myself</b> &amp; Art Direction</p>
 			</div>
 
 		</div>
