--- a/unplug.html
+++ b/unplug.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>Unplug — Andrew Thompson</title>
+	<title>Unplug &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -26,12 +26,14 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -117,7 +119,7 @@
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/unplug/3.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/unplug/3.png">
 			<div class="medium_image_caption"><h3>"Cologne" Ad</h3>
 				<p>Placed in sports magazines, fake cologne ads will entice readers to
 				smell what they think is "L'eau de Vapeur", but is actually the sickly
@@ -126,7 +128,7 @@
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/unplug/4.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/unplug/4.png">
 			<div class="medium_image_caption"><h3>Transit</h3>
 				<p>Few colleges allow Freshmen to have cars, so they're reliant on university
 				and public transportation. Bus and train ads will remind them of the impact
@@ -135,7 +137,7 @@
 
 			<div class="gap"></div>
 
-			<img class="medium_image" src="img/unplug/1.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/unplug/1.png">
 			<div class="medium_image_caption"><h3>Posters</h3>
 				<p>An anthem poster ad lays out the arguement against vaping near younger
 				family members, while two additional posters back it up with imagery meant
@@ -152,7 +154,7 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Myself</b> — Art Direction & Copywriting</p>
+				<p><b>Myself</b> &amp; Art Direction & Copywriting</p>
 			</div>
 
 			<div class="gap"></div>
