--- a/upserve.html
+++ b/upserve.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>Upserve — Andrew Thompson</title>
+	<title>Upserve &amp; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -26,12 +26,14 @@
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
 	<script src="js/animsition.min.js"></script>
+	<script src="js/jquery.unveil.js"></script>
 
 </head>
 
 
 <script>
 	$(document).ready(function(){
+		$("img").unveil();
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -107,9 +109,9 @@
 
 
 			<div class="dunkin_phone_container">
-				<img class="dunkin_1" src="img/upserve/1.png">
-				<img class="dunkin_2" src="img/upserve/2.png">
-				<img class="dunkin_3" src="img/upserve/3.png">
+				<img class="dunkin_1" src="img/bg.png" data-src="img/upserve/1.png">
+				<img class="dunkin_2" src="img/bg.png" data-src="img/upserve/2.png">
+				<img class="dunkin_3" src="img/bg.png" data-src="img/upserve/3.png">
 			</div>
 			<div class="small_image_caption"><h3>Demographic Tool</h3>
 				<p>Using Claritas Prizm data, we would allow restauranteurs to find out the
@@ -121,9 +123,9 @@
 			<div class="gap"></div>
 
 			<div class="dunkin_phone_container">
-				<img class="dunkin_1" src="img/upserve/4.png">
-				<img class="dunkin_2" src="img/upserve/5.png">
-				<img class="dunkin_3" src="img/upserve/6.png">
+				<img class="dunkin_1" src="img/bg.png" data-src="img/upserve/4.png">
+				<img class="dunkin_2" src="img/bg.png" data-src="img/upserve/5.png">
+				<img class="dunkin_3" src="img/bg.png" data-src="img/upserve/6.png">
 			</div>
 			<div class="small_image_caption"><h3>Website Redesign</h3>
 				<p>We redesigned Upserve's current website to focus on conversion, linking
@@ -133,8 +135,8 @@
 
 			<div class="gap"></div>
 
-			<img class="small_image_left" src="img/upserve/8.png">
-			<img class="small_image_right" src="img/upserve/10.png">
+			<img class="small_image_left" src="img/bg.png" data-src="img/upserve/8.png">
+			<img class="small_image_right" src="img/bg.png" data-src="img/upserve/10.png">
 			<div class="medium_image_caption"><h3>Brunch & Learn</h3>
 				<p>Upserve will host brunch learning sessions at local restaurants to spread
 				awareness of the platform. Each host will be an existing customer acting
@@ -143,7 +145,7 @@
 				will get a free branded corkscrew.</p>
 			</div>
 
-			<img class="medium_image" src="img/upserve/9.png">
+			<img class="medium_image" src="img/bg.png" data-src="img/upserve/9.png">
 			<div class="medium_image_caption" style="margin-top: 4vh;"><h3>Print</h3>
 				<p>Cover stories in local food-focused magazines will give readers an insight
 				into the restaurants they look up to, regardless of if they work in the food biz
@@ -154,8 +156,8 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Sarah DeFlaminio</b> — Strategy & Media</p>
-				<p><b>Myself</b> — Copywriting & Art Direction</p>
+				<p><b>Sarah DeFlaminio</b> &amp; Strategy & Media</p>
+				<p><b>Myself</b> &amp; Copywriting & Art Direction</p>
 			</div>
 
 		</div>
