--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
 				<div class="portfolioName">Upserve</div>
 			</a>
 
-
+			<div class="gap"></div>
+			<div class="gap"></div>
+			<div class="gap"></div>
+			<div class="gap"></div>
+			<div class="gap"></div>
 
 		</div>
 	</div>
