--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
 <body>
 	<div id="nav_bar">
-		<a id="logo" href="index.html">
+		<a id="logo" class="animsition-link" href="index.html">
 			<svg height="100%" viewBox="0 0 208 70" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 			    <!-- Generator: Sketch 55.2 (78181) - https://sketchapp.com -->
 			    <title>Combined Shape</title>
@@ -71,8 +71,8 @@
 			    </g>
 			</svg>
 		</a>
-		<a id="work" href="index.html">WORK</a>
-		<a id="about" href="about.html">ABOUT</a>
+		<a id="work" class="animsition-link" href="index.html">WORK</a>
+		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
 	<div id="page_container" class="animistion">
