--- a/att.html
+++ b/att.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>AT&T &amp; Andrew Thompson</title>
+	<title>AT&T &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -140,14 +140,14 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Anshumani Khanna</b> &amp; ACD (Copy)</p>
-				<p><b>Jess Andrews</b> &amp; ACD (Art)</p>
-				<p><b>Natalie Taylor</b> &amp; Project Manager</p>
-				<p><b>Peter Sholley</b> &amp; Project Manager</p>
-				<p><b>Oyinda Oluwa</b> &amp; Copywriter</p>
-				<p><b>Ryan Harper</b> &amp; Copywriter</p>
-				<p><b>Lindsay Saiia</b> &amp; Copywriting Intern</p>
-				<p><b>Myself</b> &amp; Art Direction Intern</p>
+				<p><b>Anshumani Khanna</b> &mdash; ACD (Copy)</p>
+				<p><b>Jess Andrews</b> &mdash; ACD (Art)</p>
+				<p><b>Natalie Taylor</b> &mdash; Project Manager</p>
+				<p><b>Peter Sholley</b> &mdash; Project Manager</p>
+				<p><b>Oyinda Oluwa</b> &mdash; Copywriter</p>
+				<p><b>Ryan Harper</b> &mdash; Copywriter</p>
+				<p><b>Lindsay Saiia</b> &mdash; Copywriting Intern</p>
+				<p><b>Myself</b> &mdash; Art Direction Intern</p>
 			</div>
 
 		</div>
