--- a/dunkin.html
+++ b/dunkin.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>Dunkin' &amp; Andrew Thompson</title>
+	<title>Dunkin' &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -126,7 +126,7 @@
 			<div class="medium_video">
 			<div class="plyr__video-embed" id="player">
 		    <iframe
-					src="https://player.vimeo.com/video/365990004?loop=false&amp;byline=false&amp;portrait=false&amp;title=false&amp;speed=true&amp;transparent=0&amp;gesture=media"
+					src="https://player.vimeo.com/video/365990004?loop=false&mdash;byline=false&mdash;portrait=false&mdash;title=false&mdash;speed=true&mdash;transparent=0&mdash;gesture=media"
 					allowfullscreen
 					allowtransparency
 					allow="autoplay"></iframe>
@@ -135,7 +135,7 @@
 
 			<!-- <div class="medium_image"> -->
 				<!-- <iframe class="medium_video"
-					src="https://player.vimeo.com/video/365990004?loop=false&amp;byline=false&amp;portrait=false&amp;title=false&amp;speed=true&amp;transparent=0&amp;gesture=media"
+					src="https://player.vimeo.com/video/365990004?loop=false&mdash;byline=false&mdash;portrait=false&mdash;title=false&mdash;speed=true&mdash;transparent=0&mdash;gesture=media"
 					allowfullscreen
 					allowtransparency
 					allow="autoplay"></iframe> -->
@@ -149,11 +149,11 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p">
-				<p><b>Sandi Spino</b> &amp; Copywriting</p>
-				<p><b>Sabrina Ghantous</b> &amp; Art Direction</p>
-				<p><b>Dasha Iarotskaia</b> &amp; Art Direction</p>
-				<p><b>Emily Babcock</b> &amp; Production</p>
-				<p><b>Myself</b> &amp; Art Direction</p>
+				<p><b>Sandi Spino</b> &mdash; Copywriting</p>
+				<p><b>Sabrina Ghantous</b> &mdash; Art Direction</p>
+				<p><b>Dasha Iarotskaia</b> &mdash; Art Direction</p>
+				<p><b>Emily Babcock</b> &mdash; Production</p>
+				<p><b>Myself</b> &mdash; Art Direction</p>
 			</div>
 
 			<div class="gap"></div>
