--- a/just.html
+++ b/just.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>JUST Water &amp; Andrew Thompson</title>
+	<title>JUST Water &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -146,9 +146,9 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p">
-				<p><b>Lindsay Saiia</b> &amp; Copywriting</p>
-				<p><b>Sarah DeFlaminio</b> &amp; Strategy</p>
-				<p><b>Myself</b> &amp; Art Direction</p>
+				<p><b>Lindsay Saiia</b> &mdash; Copywriting</p>
+				<p><b>Sarah DeFlaminio</b> &mdash; Strategy</p>
+				<p><b>Myself</b> &mdash; Art Direction</p>
 			</div>
 
 			<div class="gap"></div>
