--- a/pangea.html
+++ b/pangea.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>Pangea.app &amp; Andrew Thompson</title>
+	<title>Pangea.app &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -152,11 +152,11 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Adam Alpert</b> &amp; CEO</p>
-				<p><b>John Tambunting</b> &amp; CTO</p>
-				<p><b>Kristen Mashikian</b> &amp; Engineering (Former)</p>
-				<p><b>Scott Bagley</b> &amp; Marketing Analytics (Former)</p>
-				<p><b>Myself</b> &amp; Head of Design</p>
+				<p><b>Adam Alpert</b> &mdash; CEO</p>
+				<p><b>John Tambunting</b> &mdash; CTO</p>
+				<p><b>Kristen Mashikian</b> &mdash; Engineering (Former)</p>
+				<p><b>Scott Bagley</b> &mdash; Marketing Analytics (Former)</p>
+				<p><b>Myself</b> &mdash; Head of Design</p>
 			</div>
 
 		</div>
