--- a/unicef.html
+++ b/unicef.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>UNICEF &amp; Andrew Thompson</title>
+	<title>UNICEF &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -142,11 +142,11 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Lindsay Saiia</b> &amp; Copywriting</p>
-				<p><b>Erin Weiland</b> &amp; Strategy</p>
-				<p><b>Taylor Haughton</b> &amp; Strategy</p>
-				<p><b>Manal Jakhar</b> &amp; Design</p>
-				<p><b>Myself</b> &amp; Art Direction</p>
+				<p><b>Lindsay Saiia</b> &mdash; Copywriting</p>
+				<p><b>Erin Weiland</b> &mdash; Strategy</p>
+				<p><b>Taylor Haughton</b> &mdash; Strategy</p>
+				<p><b>Manal Jakhar</b> &mdash; Design</p>
+				<p><b>Myself</b> &mdash; Art Direction</p>
 			</div>
 
 		</div>
