--- a/unplug.html
+++ b/unplug.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>Unplug &amp; Andrew Thompson</title>
+	<title>Unplug &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -111,7 +111,7 @@
 			<div class="large_image">
 			<div class="plyr__video-embed" id="player">
 		    <iframe
-					src="https://player.vimeo.com/video/365980515?loop=false&amp;byline=false&amp;portrait=false&amp;title=false&amp;speed=true&amp;transparent=0&amp;gesture=media"
+					src="https://player.vimeo.com/video/365980515?loop=false&mdash;byline=false&mdash;portrait=false&mdash;title=false&mdash;speed=true&mdash;transparent=0&mdash;gesture=media"
 					allowfullscreen
 					allowtransparency
 					allow="autoplay"></iframe>
@@ -154,7 +154,7 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p" style="margin-top: 1.5%;">
-				<p><b>Myself</b> &amp; Art Direction & Copywriting</p>
+				<p><b>Myself</b> &mdash; Art Direction & Copywriting</p>
 			</div>
 
 			<div class="gap"></div>
