--- a/inkedin.html
+++ b/inkedin.html
@@ -10,7 +10,7 @@
 	</script>
 
 
-	<title>InkedIn &amp; Andrew Thompson</title>
+	<title>InkedIn &mdash; Andrew Thompson</title>
 
 	<link rel="stylesheet" type="text/css" href="main 2.css">
 
@@ -150,8 +150,8 @@
 
 			<div class="info_header"><h2>Credits</h2></div>
 			<div class="info_p">
-				<p><b>Lindsay Saiia</b> &amp; Copywriting</p>
-				<p><b>Myself</b> &amp; Art Direction</p>
+				<p><b>Lindsay Saiia</b> &mdash; Copywriting</p>
+				<p><b>Myself</b> &mdash; Art Direction</p>
 			</div>
 
 			<div class="gap"></div>
