--- a/inkedin.html
+++ b/inkedin.html
@@ -31,6 +31,11 @@
 <script>
 	$(document).ready(function(){
 		$("img").unveil();
+
+		$("body").children().each(function() {
+	      document.body.innerHTML = document.body.innerHTML.replace(/\u2028/g, ' ');
+	  });
+
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
