--- a/inkedin.html
+++ b/inkedin.html
@@ -30,7 +30,7 @@
 
 <script>
 	$(document).ready(function(){
-		$("img").unveil();
+		// $("img").unveil();
 
 		$("body").children().each(function() {
 	      document.body.innerHTML = document.body.innerHTML.replace(/\u2028/g, ' ');
@@ -170,6 +170,14 @@
 				concert posters will be wheatpasted throughout NYC, bringing attention both
 				Glen's Falls, NY and JUST Water.</p>
 			</div> -->
+
+			<script>
+				$(document).ready(function(){
+					$("img").unveil();
+				});
+			</script>
+
+
 		</div>
 	</div>
 </body>
