--- a/just.html
+++ b/just.html
@@ -30,12 +30,12 @@
 
 <script>
 	$(document).ready(function(){
-		$("img").unveil();
+		// $("img").unveil();
 
 		$("body").children().each(function() {
 	      document.body.innerHTML = document.body.innerHTML.replace(/\u2028/g, ' ');
 	  });
-		
+
 		$(".tag").center({against: '#tag'});
 
 		$(".tile").hover(function () {
@@ -169,4 +169,10 @@
 			</div> -->
 		</div>
 	</div>
+
+	<script>
+		$(document).ready(function(){
+			$("img").unveil();
+		});
+	</script>
 </body>
