--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
 	<div id="page_container" class="animistion">
 		<div id="post_container">
-			<img class="medium_image" style="grid-column: 1/3" src="img/headshot.jpg">
+			<img class="medium_image" style="grid-column: 1/3" src="img/bg.png" data-src="img/headshot.jpg">
 			<div class="medium_image_caption" style="grid-column: 3/6"><p>
 					Hi, I'm Andrew, and I like to design stuff. I have an unhealthy love for
 					RGB hex codes, Muji notebooks, and Italian soda from Trader Joe’s. You
@@ -109,4 +109,10 @@
 			 </div>
 		</div>
 	</div>
+
+	<script>
+		$(document).ready(function(){
+			$("img").unveil();
+		});
+	</script>
 </body>
