--- a/att.html
+++ b/att.html
@@ -28,6 +28,10 @@
 	<script src="js/animsition.min.js"></script>
 	<script src="js/jquery.unveil.js"></script>
 
+	<link rel="icon" media="(prefers-color-scheme:dark)" href="img/favicon-dark.png" type="image/png" />
+  <link rel="icon" media="(prefers-color-scheme:light)" href="img/favicon-light.png" type="image/png" />
+	<script src="https://unpkg.com/favicon-switcher@1.2.2/dist/index.js" crossorigin="anonymous" type="application/javascript"></script>
+
 </head>
 
 
