--- a/att.html
+++ b/att.html
@@ -79,6 +79,7 @@
 </script>
 
 <body>
+	<div class="animistion">
 
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
@@ -97,7 +98,7 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="page_container" class="animistion">
+	<div id="page_container">
 		<div class="label">AT&T Business</div>
 		<div id="post_container">
 			<!-- <div class="gap"></div> -->
@@ -166,4 +167,5 @@
 			$("img").unveil();
 		});
 	</script>
+	</div>
 </body>
