--- a/just.html
+++ b/just.html
@@ -28,7 +28,7 @@
 	<link rel="icon" media="(prefers-color-scheme:dark)" href="img/favicon-dark.png" type="image/png" />
   <link rel="icon" media="(prefers-color-scheme:light)" href="img/favicon-light.png" type="image/png" />
 	<script src="https://unpkg.com/favicon-switcher@1.2.2/dist/index.js" crossorigin="anonymous" type="application/javascript"></script>
-	
+
 </head>
 
 
@@ -76,6 +76,7 @@
 </script>
 
 <body>
+	<div class="animistion">
 
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
@@ -94,7 +95,7 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="page_container" class="animistion">
+	<div id="page_container">
 		<div class="label">JUST Water</div>
 		<div id="post_container">
 			<!-- <div class="gap"></div> -->
@@ -179,4 +180,5 @@
 			$("img").unveil();
 		});
 	</script>
+	</div>
 </body>
