--- a/about.html
+++ b/about.html
@@ -68,6 +68,7 @@
 </script>
 
 <body>
+	<div class="animistion">
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
 			<svg height="100%" viewBox="0 0 208 70" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -85,7 +86,7 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="page_container" class="animistion">
+	<div id="page_container">
 		<div id="post_container">
 			<img class="medium_image" style="grid-column: 1/3" src="img/bg.png" data-src="img/headshot.jpg">
 			<div class="medium_image_caption" style="grid-column: 3/6"><p>
@@ -120,4 +121,5 @@
 			$("img").unveil();
 		});
 	</script>
+	</div>
 </body>
