--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 </script>
 
 <body>
+	<div class="animistion">
 
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
@@ -92,7 +93,7 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="page_container" class="animistion">
+	<div id="page_container">
 		<div class="label">Work</div>
 		<div id="portfolio_container">
 			<a id="just" class="portfolio animistion-ink" href="just.html">
@@ -141,4 +142,5 @@
 			$("img").unveil();
 		});
 	</script> -->
+	</div>
 </body>
