--- a/inkedin.html
+++ b/inkedin.html
@@ -76,6 +76,7 @@
 </script>
 
 <body>
+	<div class="animistion">
 
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
@@ -94,7 +95,7 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="page_container" class="animistion">
+	<div id="page_container">
 		<div class="label">InkedIn</div>
 		<div id="post_container">
 			<!-- <div class="gap"></div> -->
@@ -183,5 +184,6 @@
 
 
 		</div>
+	</div>
 	</div>
 </body>
