--- a/upserve.html
+++ b/upserve.html
@@ -78,6 +78,7 @@
 </script>
 
 <body>
+	<div class="animistion">
 
 	<div id="nav_bar">
 		<a id="logo" class="animsition-link" href="index.html">
@@ -96,7 +97,7 @@
 		<a id="about" class="animsition-link" href="about.html">ABOUT</a>
 	</div>
 
-	<div id="page_container" class="animistion">
+	<div id="page_container">
 		<div class="label">Upserve</div>
 		<div id="post_container">
 			<!-- <div class="gap"></div> -->
@@ -176,4 +177,5 @@
 			$("img").unveil();
 		});
 	</script>
+	</div>
 </body>
