--- a/about.html
+++ b/about.html
@@ -42,29 +42,29 @@
 				document.body.innerHTML = document.body.innerHTML.replace(/\u2028/g, ' ');
 		});
 
-		$(".animsition").animsition({
-			inClass: 'fade-in-up-sm',
-    		outClass: 'fade-out-up-sm',
-			inDuration: 800,
-			outDuration: 800,
-			linkElement: '.animsition-link',
-			// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
-			loading: true,
-			loadingParentElement: 'body', //animsition wrapper element
-			loadingClass: 'animsition-loading',
-			loadingInner: '', // e.g '<img src="loading.svg" />'
-			timeout: true,
-			timeoutCountdown: 0,
-			onLoadEvent: true,
-			browser: [ 'animation-duration', '-webkit-animation-duration'],
-			// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
-			// The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
-			overlay : false,
-			overlayClass : 'animsition-overlay-slide',
-			overlayParentElement : 'body',
-			transition: function(url){ window.location.href = url; }
-		});
-	});
+	// 	$(".animsition").animsition({
+	// 		inClass: 'fade-in-up-sm',
+  //   		outClass: 'fade-out-up-sm',
+	// 		inDuration: 800,
+	// 		outDuration: 800,
+	// 		linkElement: '.animsition-link',
+	// 		// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
+	// 		loading: true,
+	// 		loadingParentElement: 'body', //animsition wrapper element
+	// 		loadingClass: 'animsition-loading',
+	// 		loadingInner: '', // e.g '<img src="loading.svg" />'
+	// 		timeout: true,
+	// 		timeoutCountdown: 0,
+	// 		onLoadEvent: true,
+	// 		browser: [ 'animation-duration', '-webkit-animation-duration'],
+	// 		// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
+	// 		// The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
+	// 		overlay : false,
+	// 		overlayClass : 'animsition-overlay-slide',
+	// 		overlayParentElement : 'body',
+	// 		transition: function(url){ window.location.href = url; }
+	// 	});
+	// });
 </script>
 
 <body>
@@ -119,6 +119,29 @@
 	<script>
 		$(document).ready(function(){
 			$("img").unveil();
+			$(".animsition").animsition({
+				inClass: 'fade-in-up-sm',
+	    		outClass: 'fade-out-up-sm',
+				inDuration: 800,
+				outDuration: 800,
+				linkElement: '.animsition-link',
+				// e.g. linkElement: 'a:not([target="_blank"]):not([href^="#"])'
+				loading: true,
+				loadingParentElement: 'body', //animsition wrapper element
+				loadingClass: 'animsition-loading',
+				loadingInner: '', // e.g '<img src="loading.svg" />'
+				timeout: true,
+				timeoutCountdown: 0,
+				onLoadEvent: true,
+				browser: [ 'animation-duration', '-webkit-animation-duration'],
+				// "browser" option allows you to disable the "animsition" in case the css property in the array is not supported by your browser.
+				// The default setting is to disable the "animsition" in a browser that does not support "animation-duration".
+				overlay : false,
+				overlayClass : 'animsition-overlay-slide',
+				overlayParentElement : 'body',
+				transition: function(url){ window.location.href = url; }
+			});
+		});
 		});
 	</script>
 	</div>
