Dunkin video fix

--- a/dunkin.html
+++ b/dunkin.html
@@ -169,9 +169,9 @@
 			<div class="gap"></div>
 			<div class="gap"></div>
 
-			<script>
+			<!-- <script>
 		    const player = new Plyr('#player');
-			</script>
+			</script> -->
 
 
 			<!-- <img class="small_image_right" src="img/bhddh/1.png"> -->
@@ -186,6 +186,7 @@
 
 	<script>
 		$(document).ready(function(){
+			const player = new Plyr('#player');
 			$("img").unveil();
 				$(".animsition").animsition({
 					inClass: 'fade-in-up-sm',
