--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
 					<div class="gap" style="height: 1vh;"></div>
 
 					<h3>Read more about me</h3>
-					<p><a class="animsition-link" style="text-decoration: underline;" href="https://www.dropbox.com/s/d9j0pvg5nb6jqc1/Andrew%20Thompson%20Resume%202020.pdf?dl=0">View my Resume</a></p>
+					<p><a class="animsition-link" style="text-decoration: underline;" href="https://www.dropbox.com/s/2z1os37tprg1m54/Andrew%20Thompson%20Resume%20%E2%80%94%20April%202020.pdf?dl=0">View my Resume</a></p>
 			 </div>
 		</div>
 	</div>
