--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				Director based in <span id="hover_2" class="not_hovered">Providence.</span>
 				I have experience in <span id="hover_3" class="not_hovered">branding,</span>
 				<span id="hover_4" class="not_hovered">web design,</span>and
-				<span id="hover_5" class="not_hovered">meeting deadlines,</span> along with
+				<span id="hover_5" class="not_hovered">getting sh*t done,</span> along with
 				all the work <span id="hover_6" class="not_hovered"> below here.</span>
 			</div>
 		</div>
